--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -6,20 +6,132 @@ output:
 ---
 
 
-## Loading and preprocessing the data
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+## R Markdown
+
+This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+
+When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+
+```{r }
+setwd("C:\\Users\\vsahasrabuddhe\\Documents\\Assignments\\Reproducible Research\\Wk2")
+
+install.packages("plyr",repos = "http://cran.us.r-project.org")
+
+library("plyr")
+
+library("dplyr")
+
+install.packages("ggplot2",repos = "http://cran.us.r-project.org")
+
+library("ggplot2")
+
+## 1. Import Data and check first few rows
+
+data <- read.csv("activity.csv")
+data$date <- as.Date(data$date)
+head(data)
+
+```
+
+## 2. Total number of steps taken per day
+
+##  (a) Calculate Total No Of Steps taken per day and change the column names appropriately
+
+```{r }
+StepPerDay <- aggregate(data$steps,by=list(data$date),FUN=sum)
+
+colnames(StepPerDay) <- c("date","steps")
+
+```
+##  (b) Make a histogram of the total number of steps taken each day
+
+```{r }
+ggplot(StepPerDay,aes(steps))+geom_histogram(binwidth=2500,col="red",fill="blue")+scale_x_continuous(breaks=seq(0,25000,2500))+scale_y_continuous(breaks=seq(0,18,2))+ggtitle("Histogram of Steps per day")+ xlab("steps")+ylab("Frequency")
+```
+
+##  (c) Calculate and report the mean and median of the total number of steps taken per day.
+
+```{r }
+mean(StepPerDay$steps,na.rm=TRUE)
+
+median(StepPerDay$steps,na.rm=TRUE)
+```
+
+
+## 3. Average daily activity pattern
+
+## (a) Time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis).
+
+```{r}
+AvgStepsPerInterval <- aggregate(data$steps,by=list(data$interval),FUN=mean, na.rm=TRUE)
+
+colnames(AvgStepsPerInterval) <- c("interval","avgsteps")
+
+ggplot(AvgStepsPerInterval, aes(interval, avgsteps)) + geom_line(col="red")+ggtitle("Average steps per time interval")+xlab("Time")+ylab("Steps")+theme(plot.title = element_text(face="bold", size=12))
+
+```
+
+## (b) 5-minute interval, which on average across all the days in the dataset, contains the maximum number of steps.
+```{r}
+maxSteps <- AvgStepsPerInterval[AvgStepsPerInterval$avgsteps == max(AvgStepsPerInterval$avgsteps),]
+maxSteps
+```
+
+
+## 4. Inputting missing Values.
+
+##(a) the total number of rows with \color{red}{\verb|NA|}NAs.
+
+```{r}
+sapply(data,function(x) sum(is.na(x)))
+
+```
+##(b) For replcaing missing values, we can use the avg no of steps taken for that particular interval. New data set is created with the missing data updated.
+
+```{r}
+data_mvr <- join(data, AvgStepsPerInterval)
+
+data_mvr  <- data_mvr  %>% mutate(steps=ifelse(is.na(steps),avgsteps,steps))
+
+```
+##(b)  histogram of the total number of steps taken each day with missing data filled in.
+```{r}
+StepPerDay_mvr <- aggregate(data_mvr$steps,by=list(data_mvr$date),FUN=sum)
+
+colnames(StepPerDay_mvr) <- c("date","tot_steps")
+
+ggplot(StepPerDay_mvr,aes(tot_steps))+geom_histogram(binwidth=2500,col="red",fill="blue")+scale_x_continuous(breaks=seq(0,25000,2500))+scale_y_continuous(breaks=seq(0,26,2))+ggtitle("Histogram of Steps per day")+ xlab("steps")+ylab("Frequency")
+
+```
+##(C)  Display Mean and Median values of the Steps with missing data filled in.
+```{r}
+mean(StepPerDay_mvr$tot_steps)
+
+median(StepPerDay_mvr$tot_step)
+```
+
+## 5. Activity patterns between weekdays and weekends.
+
+```{r}
+data_mvr$daytype <- weekdays(data_mvr$date)
+
+weekdayNames <- c('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday')
+
+data_mvr$daytype1 <- c('weekend','weekday')[(weekdays(data_mvr$date) %in% weekdayNames)+1L]
+
+AvgStepPerDayType <- aggregate(data_mvr[,1],by=list(data_mvr$daytype1,data_mvr$interval),FUN=mean)
+
+colnames(AvgStepPerDayType) <- c("day_type","interval","avg_steps")
+
+ggplot(AvgStepPerDayType,aes(interval,avg_steps))+geom_line(col="blue")+facet_grid(day_type~.) +ggtitle("Average steps per time interval")+xlab("Time Interval")+ylab("Avg # of Steps")
 
 
 
-## What is mean total number of steps taken per day?
+```
 
-
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
+## testing commit
