--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -105,7 +105,7 @@ StepPerDay_mvr <- aggregate(data_mvr$steps,by=list(data_mvr$date),FUN=sum)
 
 colnames(StepPerDay_mvr) <- c("date","tot_steps")
 
-ggplot(StepPerDay_mvr,aes(tot_steps))+geom_histogram(binwidth=2500,col="red",fill="blue")+scale_x_continuous(breaks=seq(0,25000,2500))+scale_y_continuous(breaks=seq(0,26,2))+ggtitle("Histogram of Steps per day")+ xlab("steps")+ylab("Frequency")
+ggplot(StepPerDay_mvr,aes(tot_steps))+geom_histogram(binwidth=2500,col="red",fill="blue")+scale_x_continuous(breaks=seq(0,25000,2500))+scale_y_continuous(breaks=seq(0,26,2))+ggtitle("Histogram of Steps per day after missing values filled in")+ xlab("steps")+ylab("Frequency")
 
 ```
 ##(C)  Display Mean and Median values of the Steps with missing data filled in.
